// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`note_actions addNewNote Dispatches the correct action and payload 1`] = `
Array [
  Object {
    "type": "ADD_NOTE",
  },
]
`;

exports[`note_actions deleteNoteFromList Dispatches the correct action and payload 1`] = `
Array [
  Object {
    "payload": 3,
    "type": "DELETE_NOTE_FROM_LIST",
  },
]
`;

exports[`note_actions loadNoteContent Dispatches the correct action and payload 1`] = `
Array [
  Object {
    "payload": Object {},
    "type": "LOAD_NOTE_CONTENT",
  },
]
`;

exports[`note_actions setActiveNoteIndex Dispatches the correct action and payload 1`] = `
Array [
  Object {
    "payload": 3,
    "type": "SET_ACTIVE_NOTE",
  },
]
`;

exports[`note_actions setNoteStatus Dispatches the correct action and payload 1`] = `
Array [
  Object {
    "payload": "SAVING_NOTE",
    "type": "SET_NOTE_STATUS",
  },
]
`;

exports[`note_actions updateActiveNoteState Dispatches the correct action and payload 1`] = `
Array [
  Object {
    "payload": Object {},
    "type": "UPDATE_ACTIVE_NOTE_STATE",
  },
]
`;

exports[`note_actions updateNoteList Dispatches the correct action and payload 1`] = `
Array [
  Object {
    "type": "UPDATE_NOTE_LIST",
  },
]
`;

exports[`note_actions updateNoteRev Dispatches the correct action and payload 1`] = `
Array [
  Object {
    "payload": "a123-a123",
    "type": "UPDATE_NOTE_REV",
  },
]
`;

exports[`note_actions updateNoteTitle Dispatches the correct action and payload 1`] = `
Array [
  Object {
    "payload": "Hello world",
    "type": "UPDATE_NOTE_TITLE",
  },
]
`;
